# cs-fundamentals-practice

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
01_data_layer/caching/: README.md  caching.py
01_data_layer/caching/tests/: test_caching.py
01_data_layer/data_modeling/: README.md  order_schema.py  schema_example.py
01_data_layer/data_modeling/tests/: test_order_schema.py  test_schema_example.py
01_data_layer/database_fundamentals/: README.md  db_basics.py
01_data_layer/database_fundamentals/tests/: test_db_basics.py
02_application_layer/aggregation/: README.md  aggregation.py
02_application_layer/data_structures/: README.md  data_structures.py
02_application_layer/graph_traversal/: README.md  graph_traversal.py
02_application_layer/interval_handling/: README.md  interval_overlap.py
02_application_layer/searching/: README.md  searching.py
02_application_layer/sorting/: README.md  sorting.py
03_interface_layer/http_basics/: README.md  http_basics.py
03_interface_layer/realtime_communication/: README.md  realtime.py
03_interface_layer/rest_api_design/: README.md  rest_api.py
04_reliability_and_scale/concurrency/: README.md  concurrency.py
04_reliability_and_scale/rate_limiting/: README.md  rate_limiting.py
04_reliability_and_scale/scaling_patterns/: README.md  scaling_patterns.py
04_reliability_and_scale/web_performance/: README.md  web_performance.py
05_design_practice/case_studies/: README.md
05_design_practice/design_method/: README.md
(+39 files in other folders)
